# ai-agent-FarmBrief

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
handlers/: commands.py
processors/: audio_generator.py  content_processor.py
utils/: storage.py
